# FreeRTOS-SMP-Blinky-Rp2040

./: CMakeLists.txt  README.md  Readme.md
includes/: BlinkyCore0.h  BlinkyCore1.h  RTOSIncludes.h  main.h
src/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  main.c
src/Blinky/: BlinkyCore0.c  BlinkyCore1.c  CMakeLists.txt
src/RTOSHooks/: CMakeLists.txt  RTOSHooks.c
